Fix: Made Pre blocks wrap in css so we get formatting correct

--- a/src/components/TextEditors/editorStyles.css
+++ b/src/components/TextEditors/editorStyles.css
@@ -66,3 +66,12 @@
         border-bottom: 1px solid #ccc;
     }
 }
+
+.ql-editor pre {
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+}
